--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
+  "root": true,
   "env": {
     "browser": true, //ブラウザでメジャーなもの（documentなど）を許可
-    "es6": true //ES6の書き方許可
+    "es2021": true
   },
   "extends": [
     "eslint:recommended", //ESLintおすすめルールの読み込み
